// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountIdentities renders empty 1`] = `
<SideEffect(DocumentTitle)
  title="Identities - Sentry"
>
  <div>
    <StyledSettingsPageHeading
      noTitleStyles={false}
      title="Identities"
    />
    <Panel>
      <PanelHeader>
        Identities
      </PanelHeader>
      <PanelBody
        flexible={false}
        withPadding={false}
      >
        <EmptyMessage>
          There are no identities associated with this account
        </EmptyMessage>
      </PanelBody>
    </Panel>
  </div>
</SideEffect(DocumentTitle)>
`;

exports[`AccountIdentities renders list 1`] = `
<SideEffect(DocumentTitle)
  title="Identities - Sentry"
>
  <div>
    <StyledSettingsPageHeading
      noTitleStyles={false}
      title="Identities"
    />
    <Panel>
      <PanelHeader>
        Identities
      </PanelHeader>
      <PanelBody
        flexible={false}
        withPadding={false}
      >
        <IdentityPanelItem
          key="1"
          p={2}
        >
          <div>
            GitHub
          </div>
          <forwardRef<Button>
            onClick={[Function]}
            size="small"
          >
            Disconnect
          </forwardRef<Button>>
        </IdentityPanelItem>
      </PanelBody>
    </Panel>
  </div>
</SideEffect(DocumentTitle)>
`;
